Closed
Bug 1281419
Opened 9 years ago
Closed 9 years ago
Mozilla has caught an Obj-C exception [NSBadBitmapParametersException: Overflow allocating bitmap backing store...]
Categories
(Core :: Graphics: ImageLib, defect)
Core
Graphics: ImageLib
Tracking
()
RESOLVED
FIXED
mozilla50
| Tracking | Status | |
|---|---|---|
| firefox50 | --- | fixed |
People
(Reporter: jruderman, Assigned: lsalzman)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
2016-06-22 03:17:27.024 firefox-bin[97888:419280] Mozilla has caught an Obj-C exception [NSBadBitmapParametersException: Overflow allocating bitmap backing store. Cannot back bitmap with 34359738368 bytes per row, 8589934590 height, and 1 planes.]
See also bug 1230115, for when the size is large rather than negative.
| Reporter | ||
Comment 1•9 years ago
|
||
| Assignee | ||
Comment 2•9 years ago
|
||
mSize in nsMozIconURI is stored as a uint32_t, but we allow the input to come from an int. So if the input is negative, it will end up wrapping when stuffed into mSize. The prudent thing here seems to be to just ignore such negative values.
Comment 3•9 years ago
|
||
Comment on attachment 8764338 [details] [diff] [review]
ignore negative icon size in URI
Review of attachment 8764338 [details] [diff] [review]:
-----------------------------------------------------------------
Looks good Lee!
Attachment #8764338 -
Flags: review?(seth) → review+
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/45fb2585696d
ignore negative icon size in URI. r=seth
Comment 5•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in
before you can comment on or make changes to this bug.
Description
•