Bug 1281419 - ignore negative icon size in URI. r=seth